docs/v7.1/classes/E42.md
---
layout: page
title: E42 Identifiant
titleEn: E42 Identifier - Identifiant
permalink: /v7.1/classes/E42
sidebar: v71
group: classes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Sous-classe de</strong></td>
<td class="en">
<p>E41 Appellation</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E41_Appellation</code></p>
</td>
</tr>
<tr>
<td><strong>Super-classe de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This class comprises strings or codes assigned to instances of E1 CRM Entity in order to identify them uniquely and permanently within the context of one or more organisations. Such codes are often known as inventory numbers, registration codes, etc. and are typically composed of alphanumeric sequences. Postal addresses, telephone numbers, urls and e-mail addresses are characteristic examples of identifiers used by services transporting things between clients.</p>
<p>The class E42 Identifier is not normally used for machine-generated identifiers used for automated processing unless these are also used by human agents.</p>
</td>
<td>
<p>Cette classe comprend des chaînes de caractères ou des codes assignés à des instances de <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code> afin de les identifier de manière unique et pérenne dans le contexte d’une ou de plusieurs organisations. Ces codes sont souvent appelés numéros d’inventaire, codes d’enregistrement, etc. et sont typiquement composés de séquences alphanumériques. Les adresses postales, les numéros de téléphone, les URL et les adresses courriel sont des exemples caractéristiques d’identifiants utilisés par des services acheminant des choses entre des clients. </p>
<p>La classe <code class="language-plaintext highlighter-rouge">E42_Identifiant</code> n’est normalement pas utilisée pour représenter des identifiants générés par la machine et utilisés pour le traitement automatisé, sauf si ceux-ci sont aussi utilisés par des agents humains. </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>“MM.GE.195”</p>
</li>
<li><p>“13.45.1976”</p>
</li>
<li><p>“OXCMS: 1997.4.1”</p>
</li>
<li><p>ISSN “0041-5278”</p>
</li>
<li><p>ISRC “FIFIN8900116”</p>
</li>
<li><p>Shelf mark “Res 8 P 10”</p>
</li>
<li><p>“Guillaume de Machaut (1300?-1377)” [a controlled personal name heading that follows the French rules] (Reaney, 1974)</p>
</li>
<li><p>“+41 22 418 5571”</p>
</li>
<li><p>weasel@paveprime.com</p>
</li>
<li><p>“1-29-3 Otsuka, Bunkyo-ku, Tokyo, 121, Japan”</p>
</li>
<li><p>“Rue David Dufour 5, CH-1211, Genève”</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>« MM.GE.195 »</p>
</li>
<li><p>« 13.45.1976 »</p>
</li>
<li><p>« OXCMS: 1997.4.1 »</p>
</li>
<li><p>ISSN « 0041-5278 »</p>
</li>
<li><p>ISRC « FIFIN8900116 »</p>
</li>
<li><p>Cote « Res 8 P 10 »</p>
</li>
<li><p>« Guillaume de Machaut (1300?-1377) » [un nom de personne utilisé dans une vedette d’autorité qui suit les règles de catalogage françaises] (Reaney, 1974)</p>
</li>
<li><p>« +41 22 418 5571 »</p>
</li>
<li><p>weasel@paveprime.com</p>
</li>
<li><p>« 1-29-3 Otsuka, Bunkyo-ku, Tokyo, 121, Japan »</p>
</li>
<li><p>« Rue David Dufour 5, CH-1211, Genève »</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>E42(x) ⇒ E41(x)</p>
</td>
<td>
<p>E42(x) ⇒ E41(x)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
