docs/v7.1.2/classes/E42.md
---
layout: page
title: E42 Identifiant
titleEn: E42 Identifier - Identifiant
permalink: /v7.1.2/classes/E42
sidebar: v712
group: classes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Sous-classe de</strong></p></td>
<td class="en">
<p>E41 Appellation</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E41_Appellation</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-classe de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This class comprises strings or codes assigned to instances of E1 CRM Entity in order to identify them uniquely and permanently within the context of one or more organisations. Such codes are often known as inventory numbers, registration codes, etc. and are typically composed of alphanumeric sequences. Postal addresses, telephone numbers, URLs and e-mail addresses are characteristic examples of identifiers used by services transporting things between clients.</p>
<p>The class E42 Identifier is not normally used for machine-generated identifiers used for automated processing unless these are also used by human agents.</p>
</td>
<td>
<p>Cette classe comprend des chaînes de caractères ou des codes assignés à des instances de <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code> afin de les identifier de manière unique et pérenne dans le contexte d’une ou de plusieurs organisations. Ces codes sont souvent appelés numéros d’inventaire, codes d’enregistrement, etc. et sont typiquement composés de séquences alphanumériques. Les adresses postales, les numéros de téléphone, les URL et les adresses courriel sont des exemples caractéristiques d’identifiants utilisés par des services acheminant des choses entre des clients. </p>
<p>La classe <code class="language-plaintext highlighter-rouge">E42_Identifiant</code> n’est normalement pas utilisée pour représenter des identifiants générés par la machine et utilisés pour le traitement automatisé, sauf si ceux-ci sont aussi utilisés par des agents humains. </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>“MM.GE.195”</p>
</li>
<li><p>“13.45.1976”</p>
</li>
<li><p>“OXCMS: 1997.4.1” (fictitious)</p>
</li>
<li><p>“ISSN 0041-5278” [Identifier for “The UNESCO Courier (Print)”]</p>
</li>
<li><p>“ISRC FIFIN8900186” [Identifier for : Kraft (29 min 14 s) / Magnus Lindberg, comp. ; Toimii Ensemble ; Swedish Radio symphony orchestra ; Esa-Pekka Salonen, dir.]</p>
</li>
<li><p>Shelf mark “Res 8 P 10”</p>
</li>
<li><p>“Guillaume de Machaut (1300?-1377)” [a controlled personal name heading that follows the French rules] (Reaney, 1974)</p>
</li>
<li><p>“+41 22 418 5571”</p>
</li>
<li><p>weasel@paveprime.com</p>
</li>
<li><p>“Rue David Dufour 5, CH-1211, Genève”</p>
</li>
<li><p>“1-29-3 Otsuka, Bunkyo-ku, Tokyo, 121, Japan”</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>« MM.GE.195 »</p>
</li>
<li><p>« 13.45.1976 »</p>
</li>
<li><p>« OXCMS: 1997.4.1 » (fictif)</p>
</li>
<li><p>ISSN « 0041-5278 » [identifiant du « The UNESCO Courier » en version imprimée]</p>
</li>
<li><p>ISRC « FIFIN8900116 »  [Identifiant du « Kraft (29 min 14 s) / Magnus Lindberg, comp.; Toimii Ensemble ; Swedish Radio symphony orchestra; Esa-Pekka Salonen, dir. »]</p>
</li>
<li><p>Cote « Res 8 P 10 »</p>
</li>
<li><p>« Guillaume de Machaut (1300?-1377) » [un nom de personne utilisé dans une vedette d’autorité qui suit les règles de catalogage françaises] (Reaney, 1974)</p>
</li>
<li><p>« +41 22 418 5571 »</p>
</li>
<li><p><a href="mailto:weasel@paveprime.com"><span class="underline">weasel@paveprime.com</span></a></p>
</li>
<li><p>« Rue David Dufour 5, CH-1211, Genève »</p>
</li>
<li><p>« 1-29-3 Otsuka, Bunkyo-ku, Tokyo, 121, Japan »</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>E42(x) ⇒ E41(x)</p>
</td>
<td>
<p>E42(x) ⇒ E41(x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
